--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -609,11 +609,11 @@ server:
   ## https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_write
   ##
   remoteWrite:
-    - url: "https://ts-bp1945kekiak44xv9.influxdata.tsdb.aliyuncs.com:8086/api/v1/prom/write?db=prometheus&u=prominfluxdb&p=sJkrCFTV3zbvADEm"
+    - url: "https://your_influxdata.com:8086/api/v1/prom/write?db=prometheus&u=prominfluxdb&p=passwd"
   ## https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_read
   ##
   remoteRead:
-    - url: "https://ts-bp1945kekiak44xv9.influxdata.tsdb.aliyuncs.com:8086/api/v1/prom/write?db=prometheus&u=prominfluxdb&p=sJkrCFTV3zbvADEm"
+    - url: "https://your_influxdata.com:8086/api/v1/prom/write?db=prometheus&u=prominfluxdb&p=passwd"
 
 
   ## Additional Prometheus server container arguments
